--- a/memoria/Base.lproj/Main.storyboard
+++ b/memoria/Base.lproj/Main.storyboard
@@ -39,7 +39,10 @@
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JWB-yz-ZPz">
                                         <rect key="frame" x="0.0" y="303.66666666666669" width="304" height="30"/>
-                                        <state key="normal" title="COMENZAR"/>
+                                        <state key="normal" title="START"/>
+                                        <connections>
+                                            <action selector="Start:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BFf-Iw-WjI"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="INSTRUCCIONES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nyb-NA-0kS">
                                         <rect key="frame" x="0.0" y="337.66666666666669" width="304" height="20.333333333333314"/>
@@ -66,6 +69,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="Start_button" destination="JWB-yz-ZPz" id="sh8-NA-Awh"/>
                         <outlet property="img_to_show" destination="kqm-Mf-WjA" id="5A6-WU-g2U"/>
                     </connections>
                 </viewController>
